# shttpd

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  shttpd.conf
src/template/: conf_template.conf
src/web/: 404.html
