[package]
name = "shttpd"
version = "0.1.0"
edition = "2021"
authors = ["NotCreative21"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
glob = "0.3.0"
toml = "0.5.3"
serde = "1.0.117"
serde_derive = "1.0.117"
